--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,7 +4,16 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+   background: rgb(240, 128, 128);
+   background: radial-gradient(circle at center,
+         rgba(240, 128, 128, 1) 0%,
+         rgba(237, 240, 230, 1) 30%,
+         rgba(176, 196, 222, 0.8) 60%,
+         rgba(176, 196, 222, 1) 80%);
+   background-size: 200% 200%;
+   transition: background-position 0.1s;
 }
+
 
 .contact-container {
     width: 80%;
@@ -19,6 +28,7 @@
     padding: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1;
+
 }
 /* Style for the form groups */
 .form-group {
@@ -53,7 +63,6 @@ button {
     background-color: #e74c3c;
     color: white;
     border: none;
-    cursor: pointer;
     font-size: 24px;
     border-radius: 12px;
     font-family: New Amsterdam;
@@ -63,4 +72,10 @@ button {
 
 button:hover {
     background-color: #f13e2a;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
 }
