--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -1,7 +1,7 @@
 .projects {
     height: 100vh;
     width: 100%;
-    background-color: lightsteelblue;
+    background-color: #b0c4de;
     display: flex;
     flex-direction: column;
     align-items: center;
