--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,39 +1,65 @@
 .navbar {
-    background-color: rgba(85, 85, 85, 0.2);
-    backdrop-filter: blur(10px);
-    position: fixed;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    bottom: 10px;
-    width: 50%;
-    z-index: 999;
-    padding: 20px 10px;
-    border-radius: 50px;
+   background-color: rgba(85, 85, 85, 0.2);
+   backdrop-filter: blur(10px);
+   position: fixed;
+   left: 0;
+   right: 0;
+   margin: 0 auto;
+   /* bottom: 10px; */
+   width: 100%;
+   height: 94%;
+   z-index: 999;
+   padding: 20px 10px;
+   /* display: none; */
 }
+
+.navbar img.menu-close {
+   width: 60px;
+   position: absolute;
+   right: 50px;
+}
+
+.menu-open {
+   width: 60px;
+   position: fixed;
+   right: 50px;
+   top: 20px;
+   z-index: 1000;
+   cursor: pointer;
+}
+
 .nav-items {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0;
-    padding: 0;
+   display: flex;
+   justify-content: center;
+   margin: 0;
+   padding: 0;
+   flex-direction: column;
+   align-items: center;
+   gap: 15%;
+   height: 100%;
 }
+
 .nav-items a {
-    text-decoration: none;
-    color: white;
-    font-weight: 900;
-    text-transform: uppercase;
-    position: relative;
+   text-decoration: none;
+   color: white;
+   font-weight: normal;
+   text-transform: uppercase;
+   position: relative;
+   font-size: 70px;
+   font-family: 'New Amsterdam';
 }
-.nav-items a span{
-    height: 0%;
-    width: 0%;
-    position: absolute;
-    bottom: 0px;
-    background-color: white;
-    z-index: 999;
-    transition: all 0.3s ease;
+
+.nav-items a span {
+   height: 0%;
+   width: 0%;
+   position: absolute;
+   bottom: 0px;
+   background-color: white;
+   z-index: 999;
+   transition: all 0.3s ease;
 }
-.nav-items a:hover span{
-    width: 100%;
-    height: 2px;
+
+.nav-items a:hover span {
+   width: 100%;
+   height: 2px;
 }
