--- a/src/components/Cursor/cursor.css
+++ b/src/components/Cursor/cursor.css
@@ -3,19 +3,20 @@
     height: 8px;
     width: 8px;
     border-radius: 50%;
-    background-color: #111;
+    background-color: #000000;
     position: fixed;
     z-index: 9999;
     pointer-events: none;
     transform: translate(-50%, -50%);
+
 }
 
 #cursorRing {
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    border: 1px solid #111;
-    color: whitesmoke;
+    border: 2px solid;
+    color: rgb(0, 0, 0);
     text-align: center;
     display: flex;
     justify-content: center;
