--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,30 +1,42 @@
 .hero {
     display: flex;
     justify-content: center;
-}
-.background-gradient-animation {
-  position: absolute;
-  inset: 0;
-  /* background: linear-gradient(45deg, #333333, #aaaaaa, #333333); */
-  background-size: 200% 200%;
-  animation: gradientAnimation 2s ease infinite;
-  z-index: -1;
-}
-  
-.intro{
-    display: flex;
-    text-align: center;
-    align-items: center;
-}
-.intro h1{
-    font-family: Dahlia;
-    font-size: 6rem;
-    color: black;
-    margin-top: -50px;
-    position: relative;
-    width: 100%;
+    flex-wrap: wrap;
+    z-index: 2;
 }
 
+.video-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    object-fit: cover;
+}
+
+.intro {
+    /* display: flex; */
+    text-align: center;
+    /* align-content: center; */
+    align-items: center;
+}
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .intro h1 {
+    margin: 0;
+    display: inline-block;
+    font-family: Dahlia;
+    font-size: 4rem;
+    color: rgb(0, 0, 0);
+}
+.title span {
+    color: white;
+}
 .intro span{
     background-image: url("../../assets/Web.jpg");
     -webkit-background-clip: text;
