--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -17,6 +17,7 @@
    width: 60px;
    position: absolute;
    right: 50px;
+   color: white;
 }
 
 .menu-open {
@@ -35,7 +36,7 @@
    padding: 0;
    flex-direction: column;
    align-items: center;
-   gap: 15%;
+   gap: 5%;
    height: 100%;
 }
 
