--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -8,7 +8,7 @@
   }
   
   .card-body {
-    background-color: #f9fafb;
+    background-color: whitesmoke;
     width: 100%;
     padding: 1.5rem;
     border-radius: 1rem;
