--- a/src/index.css
+++ b/src/index.css
@@ -2,42 +2,43 @@
 
 
 body {
-   margin: 0;
-   cursor: none;
+    margin: 0;  
+    cursor: none;
 }
 
 #overlay {
-   height: 100%;
-   width: 100%;
-   background-color: transparent;
-   position: absolute;
-   z-index: 10;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  position: absolute;
+  z-index: 10;
+}
+  
+@font-face {
+    font-family: "Kame";
+    src: url(./assets/668e75f5d1cc5a461ce7506c_KamePoster-Black.otf);
 }
 
 @font-face {
-   font-family: "Kame";
-   src: url(./assets/668e75f5d1cc5a461ce7506c_KamePoster-Black.otf);
-}
-
-@font-face {
-   font-family: "Dahlia";
-   src: url(./assets/dahlia-medium.woff2);
+    font-family: "Dahlia";
+    src: url(./assets/dahlia-medium.woff2);
 }
 
 .title {
-   font-family: "New Amsterdam", sans-serif;
-   font-weight: 400;
-   margin: 0;
-   width: 100%;
-   text-align: center;
-   font-size: 5rem;
-   color: white;
-   padding: 10px 0;
-}
+    font-family: "New Amsterdam", sans-serif;
+    font-weight: 400;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 5rem;
+    color: white;
+    padding: 10px 0;
 
+    height: max-content;
+}
 span {
-   font-family: "New Amsterdam", sans-serif;
-   font-weight: 400;
-   font-size: inherit;
-   color: #000000;
+    font-family: "New Amsterdam", sans-serif;
+    font-weight: 400;
+    font-size: inherit;
+    color: #001d3d ;
 }
