--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -131,7 +131,8 @@ button:hover {
 }
 
 button:active {
-   background-color: #f03f2b;
+   background-color: #1565c0;
+   color: #fff;
 
 }
 
@@ -158,4 +159,27 @@ input[type="number"]::-webkit-inner-spin-button {
    font-family: "New Amsterdam", sans-serif;
    font-size: 22px;
    text-transform: uppercase;
+   display: block;
 }
+
+/* contact.css */
+
+.modal {
+   position: fixed;
+   bottom: 20px;
+   right: 20px;
+   background-color: rgb(93 149 212);
+   color: white;
+   padding: 20px 50px;
+   border-radius: 5px;
+   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+   z-index: 1000;
+ }
+ 
+ .modal p {
+   font-family: "New Amsterdam", sans-serif;
+   margin: 0;
+   font-size: 24px;
+   color: whitesmoke;
+ }
+ 
