--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -54,7 +54,7 @@
 }
 
 .marquee.animate {
-   animation: marquee 15s linear infinite;
+   animation: marquee 20s linear infinite;
    /* Adjust speed as needed */
 }
 
@@ -121,6 +121,7 @@
    padding: 10px 50px;
    margin-top: 10px;
    text-decoration: none;
+   transition: all 0.3s ease-in-out;
 }
 .resume-btn:hover {
    background-color: white;
@@ -163,5 +164,73 @@
 
    100% {
       transform: translateX(-100%);
+   }
+}
+@media screen and (max-width:1303px) {
+   .about-content h1 {
+      font-size: 32px;
+   }
+}
+
+@media screen and (min-width: 990px) and (max-width: 1157px) {
+   .about-content h1 {
+      font-size: 30px;
+   }
+}
+
+@media screen and (min-width: 868px) and (max-width: 990px) {
+   .about-content h1 {
+      font-size: 27px;
+      line-height: 1.3;
+   }
+}
+
+@media screen and (max-width:868px) {
+   .about-content h1 {
+      font-size: 24px;
+      line-height: 1.3;
+   }
+   .about-content {
+      padding: 20px 40px;
+   }
+   .about-bg img {
+      width: 25%;
+   }
+   .shape {
+      width: 30% !important;
+      height: 60%  !important;
+      left: 15%  !important;
+   }
+   
+
+}
+@media screen and (max-width:768px) {
+   .about-bg {
+      padding-top: 70px;
+      flex-direction: column;
+      height: 100%;
+  }
+  .shape {
+   display: none  ;
+}
+
+   .about-content {
+      justify-content: center;
+      height: auto;
+      width: 70%;
+      gap: 20px;
+      padding: 40px;
+  }
+  .about-bg img {
+   width: 40%;
+   height: 50%;
+  }
+}
+@media screen and (max-width:567px) {
+   .about-content h1 {
+      font-size: 20px;
+   }
+   .about-content {
+      padding: 15px 30px;
    }
 }
