--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -45,5 +45,33 @@ canvas {
     background-size: cover;
     display: inline-block;
     font-family: Dahlia;
-    
+}
+@media screen and (max-width:1303px) {
+    .intro h1 {
+        font-size: 3rem;
+    } 
+}
+@media screen and (max-width:868px) {
+    .intro h1 {
+        font-size: 2.5rem;
+    } 
+}
+@media screen and (max-width:768px) {
+    .intro h1 {
+        font-size: 2rem;
+    } 
+}
+@media screen and (max-width:550px) {
+    .intro h1 {
+        font-size: 1.5rem;
+    } 
+}
+@media screen and (max-width:410px) {
+    .intro h1 {
+        font-size: 1rem;
+    } 
+    .about-content h1 {
+        font-size: 20px;
+    }
+
 }
