--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -64,3 +64,10 @@
    width: 100%;
    height: 2px;
 }
+@media screen and (max-width:768px) {
+   .menu-open {
+      width: 50px;
+      top: 28px;
+      right: 20px;
+   }
+}
