--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,14 @@ span {
     font-size: inherit;
     color: #001d3d ;
 }
+
+@media screen and (max-width: 990px) {
+    .title {
+        font-size: 4rem;
+     }
+}
+@media screen and (max-width:550px) {
+    .title {
+        font-size: 3rem;
+    }
+}
