--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -59,7 +59,11 @@
    z-index: 999;
    transition: all 0.3s ease;
 }
+.nav-items a:hover {
+   -webkit-text-stroke: 1px rgb(255, 255, 255);
+   color: transparent;
 
+}
 .nav-items a:hover span {
    width: 100%;
    height: 2px;
