--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -168,8 +168,7 @@ input[type="number"]::-webkit-inner-spin-button {
    position: fixed;
    bottom: 20px;
    right: 20px;
-   background-color: rgb(93 149 212);
-   color: white;
+   background-color: #a9eaba;
    padding: 20px 50px;
    border-radius: 5px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -180,7 +179,7 @@ input[type="number"]::-webkit-inner-spin-button {
    font-family: "New Amsterdam", sans-serif;
    margin: 0;
    font-size: 24px;
-   color: whitesmoke;
+   color: rgb(0, 0, 0);
  }
  @media screen and (max-width:830px) {
    .contact {
