--- a/src/components/Cursor/cursor.css
+++ b/src/components/Cursor/cursor.css
@@ -28,3 +28,9 @@
     transform: translate(-50%, -50%);
 }
 
+
+@media screen and (max-width:768px) {
+    #cursorDot, #cursorRing {
+        display: none;
+    }
+}
