--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -89,6 +89,8 @@
 @media screen and (max-width:868px) {
   .project-content {
     flex-direction: column;
+    gap: 10px;
+    justify-content: start;
   }
   .projects-list {
     width: 60%;
