--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -4,7 +4,7 @@
    justify-content: center;
    align-items: center;
    width: 100%;
-   height: auto;
+  height: 100vh;
    background-color: #1565c0;
 }
 .lines {
