--- a/src/index.css
+++ b/src/index.css
@@ -2,54 +2,77 @@
 
 
 body {
-    margin: 0;  
-    cursor: none;
+   margin: 0;
+   cursor: none;
+}
+
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+   background-color: #F5F5F5;
+   border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+   width: 10px;
+   background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+   border-radius: 10px;
+   background-image: -webkit-gradient(linear,
+         left bottom,
+         left top,
+         color-stop(0.44, rgb(122, 153, 217)),
+         color-stop(0.72, rgb(73, 125, 189)),
+         color-stop(0.86, rgb(28, 58, 148)));
 }
 
 #overlay {
-  height: 100%;
-  width: 100%;
-  background-color: transparent;
-  position: absolute;
-  z-index: 10;
-}
-  
-@font-face {
-    font-family: "Kame";
-    src: url(./assets/668e75f5d1cc5a461ce7506c_KamePoster-Black.otf);
+   height: 100%;
+   width: 100%;
+   background-color: transparent;
+   position: absolute;
+   z-index: 10;
 }
 
 @font-face {
-    font-family: "Dahlia";
-    src: url(./assets/dahlia-medium.woff2);
+   font-family: "Kame";
+   src: url(./assets/668e75f5d1cc5a461ce7506c_KamePoster-Black.otf);
+}
+
+@font-face {
+   font-family: "Dahlia";
+   src: url(./assets/dahlia-medium.woff2);
 }
 
 .title {
-    font-family: "New Amsterdam", sans-serif;
-    font-weight: 400;
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 5rem;
-    color: white;
-    padding: 10px 0;
+   font-family: "New Amsterdam", sans-serif;
+   font-weight: 400;
+   margin: 0;
+   width: 100%;
+   text-align: center;
+   font-size: 5rem;
+   color: white;
+   padding: 10px 0;
 
-    height: max-content;
+   height: max-content;
 }
+
 span {
-    font-family: "New Amsterdam", sans-serif;
-    font-weight: 400;
-    font-size: inherit;
-    color: #001d3d ;
+   font-family: "New Amsterdam", sans-serif;
+   font-weight: 400;
+   font-size: inherit;
+   color: #001d3d;
 }
 
 @media screen and (max-width: 990px) {
-    .title {
-        font-size: 4rem;
-     }
+   .title {
+      font-size: 4rem;
+   }
 }
+
 @media screen and (max-width:550px) {
-    .title {
-        font-size: 3rem;
-    }
+   .title {
+      font-size: 3rem;
+   }
 }
